--- a/web/src/app/pages/streams-detail/paid-chat-chart/paid-chat-chart.html
+++ b/web/src/app/pages/streams-detail/paid-chat-chart/paid-chat-chart.html
@@ -1,5 +1,7 @@
 <hls-sub-menu>
-  <hls-sub-menu-title>Paid Live Chat</hls-sub-menu-title>
+  <hls-sub-menu-title i18n="@@paidLiveChat">
+    Super Chat & Super Stickers
+  </hls-sub-menu-title>
 
   <hls-sub-menu-extra> </hls-sub-menu-extra>
 </hls-sub-menu>
