--- a/web/src/app/pages/streams-detail/streams-detail.html
+++ b/web/src/app/pages/streams-detail/streams-detail.html
@@ -23,6 +23,7 @@
         <hls-stream-stats-chart
           [rows]="report.rows"
           [stream]="stream"
+          i18n-name="@@streamLikes"
           name="Stream likes"
         >
         </hls-stream-stats-chart>
