feat(web): japanese translation

--- a/web/src/app/layout/header/header.html
+++ b/web/src/app/layout/header/header.html
@@ -18,9 +18,10 @@
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="selectLanguage('en')">English</button>
+    <button mat-menu-item (click)="selectLanguage('es')">Español</button>
+    <button mat-menu-item (click)="selectLanguage('ja')">日本語</button>
     <button mat-menu-item (click)="selectLanguage('ms')">Melayu</button>
     <button mat-menu-item (click)="selectLanguage('zh')">中文</button>
-    <button mat-menu-item (click)="selectLanguage('es')">Español</button>
   </mat-menu>
   <button
     mat-icon-button
