fix(web): stream thumbnail styling

--- a/web/src/app/components/stream-item/_stream-item-theme.scss
+++ b/web/src/app/components/stream-item/_stream-item-theme.scss
@@ -24,11 +24,8 @@
       );
     }
 
-    .profile {
-      background-color: $background-shadow;
-    }
-
-    .thumbnail:before {
+    .profile,
+    .thumbnail {
       background-color: $background-shadow;
     }
   }
