--- a/web/src/app/pages/streams-detail/stream-summary/stream-summary.scss
+++ b/web/src/app/pages/streams-detail/stream-summary/stream-summary.scss
@@ -4,34 +4,21 @@
   align-items: center;
 
   .cover {
-    width: 100%;
     position: relative;
+    display: block;
+
+    width: 100%;
+    padding-bottom: 56.25%;
 
     @media (min-width: 600px) {
       width: 50%;
-    }
-
-    &:before {
-      content: "";
-      width: 100%;
-      display: block;
-      padding-bottom: 56.25%;
-    }
-
-    .link {
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      display: block;
+      padding-bottom: 28.125%;
     }
 
     .img {
-      display: block;
-      max-width: 100%;
-      max-height: none;
-
+      position: absolute;
+      width: 100%;
+      height: 100%;
       object-position: center;
       object-fit: cover;
     }
