--- a/web/src/app/pages/streams-detail/stream-stats-chart/_stream-stats-chart-theme.scss
+++ b/web/src/app/pages/streams-detail/stream-stats-chart/_stream-stats-chart-theme.scss
@@ -3,10 +3,11 @@
 @mixin stream-stats-chart-theme($theme) {
   $is-dark-theme: map-get($theme, "is-dark");
   $foreground: map-get($theme, "foreground");
+  $background: map-get($theme, "background");
 
   .stream-stats-chart {
     .label {
-      fill: mat.get-color-from-palette($foreground, "hint-text");
+      fill: #8f8f8f;
     }
 
     .guideline {
@@ -15,6 +16,11 @@
 
     .line {
       stroke: mat.get-color-from-palette($foreground, "divider");
+    }
+
+    .stroke {
+      stroke: mat.get-color-from-palette($background, "card");
+      fill: mat.get-color-from-palette($background, "card");
     }
   }
 
@@ -25,7 +31,8 @@
 
 @mixin stream-stats-chart-typography($config) {
   .stream-stats-chart {
-    .label {
+    .label,
+    .stroke {
       font-size: mat.font-size($config, "caption");
       font-weight: mat.font-weight($config, "body-2");
     }
