--- a/web/src/app/pages/streams-detail/live-chat/live-chat.scss
+++ b/web/src/app/pages/streams-detail/live-chat/live-chat.scss
@@ -3,6 +3,8 @@
   // slightly larger than topMargin + height + bottomMargin
   // to prevent overflow
   height: 360px;
+  font-family: "Fira Code", monospace;
+  user-select: none;
 
   .scroll {
     position: absolute;
@@ -12,30 +14,28 @@
     left: 0;
     right: 0;
     bottom: 0;
-    user-select: none;
-  }
-
-  .axis {
-    top: 0;
-    right: 0;
-    overflow: hidden;
-    position: absolute;
   }
 
   .line {
     stroke-width: 1px;
   }
 
-  .label {
-    font-family: "Fira Code", monospace;
+  .x-axe {
+    text-anchor: middle;
   }
 
-  .y.label {
+  .y-axe {
+    overflow: hidden;
+    position: absolute;
+    pointer-events: none;
+    right: 16px;
     text-anchor: end;
   }
 
-  .x.label {
-    text-anchor: middle;
+  .stroke {
+    stroke-width: 5px;
+    stroke-linejoin: round;
+    stroke-linecap: round;
   }
 }
 
