feat(web): stream-time-by-{day,hour,month,weekday}

--- a/web/src/app/pages/vtubers-detail/stream-time/_stream-time-theme.scss
+++ b/web/src/app/pages/vtubers-detail/stream-time/_stream-time-theme.scss
@@ -8,6 +8,10 @@
     .label {
       fill: mat.get-color-from-palette($foreground, "secondary-text");
     }
+
+    .line {
+      stroke: mat.get-color-from-palette($foreground, "divider");
+    }
   }
 }
 
