--- a/web/src/app/pages/streams-detail/live-chat/live-chat.html
+++ b/web/src/app/pages/streams-detail/live-chat/live-chat.html
@@ -26,7 +26,7 @@
     >
       <g
         *ngFor="let row of rows; index as i"
-        [ngStyle]="{ opacity: dataIndex === -1 || dataIndex === i ? 1 : 0.4 }"
+        [style.opacity]="dataIndex === -1 || dataIndex === i ? 1 : 0.4"
       >
         <rect
           @bar
