chore: add hololive id 3rd gen

--- a/web/src/app/pages/vtubers-detail/vtuber-summary/vtuber-summary.html
+++ b/web/src/app/pages/vtubers-detail/vtuber-summary/vtuber-summary.html
@@ -2,7 +2,7 @@
   <div class="info">
     <img
       class="profile"
-      [attr.src]="'https://holos3.poi.cat/profiles/' + vtuber.id + '.jpg?ngsw-bypass'"
+      [attr.src]="'/assets/profiles/' + vtuber.id + '.jpg?ngsw-bypass'"
     />
   </div>
 
