feat(web): respect prefers-color-scheme media

--- a/web/src/app/pages/settings/settings.html
+++ b/web/src/app/pages/settings/settings.html
@@ -1,7 +1,13 @@
 <hls-helmet i18n-title="@@settings" title="Settings"></hls-helmet>
 
 <div class="settings mx-auto max-w-960">
-  <hls-timezone-settings></hls-timezone-settings>
+  <h4 class="title">General</h4>
+
+  <mat-list>
+    <hls-theme-settings></hls-theme-settings>
+
+    <hls-timezone-settings></hls-timezone-settings>
+  </mat-list>
 
   <hls-youtube-settings></hls-youtube-settings>
 
