feat(web): add ngsw settings page

--- a/web/src/app/pages/settings/settings.html
+++ b/web/src/app/pages/settings/settings.html
@@ -14,4 +14,12 @@
   <mat-divider></mat-divider>
 
   <hls-vtubers-settings></hls-vtubers-settings>
+
+  <mat-divider></mat-divider>
+
+  <h4 class="title">Miscellaneous</h4>
+
+  <mat-nav-list>
+    <a mat-list-item routerLink="/settings/ngsw"> Service worker </a>
+  </mat-nav-list>
 </div>
