--- a/web/src/app/pages/settings/settings.html
+++ b/web/src/app/pages/settings/settings.html
@@ -20,6 +20,8 @@
   <h4 class="title">Miscellaneous</h4>
 
   <mat-nav-list>
-    <a mat-list-item routerLink="/settings/ngsw"> Service worker </a>
+    <a mat-list-item routerLink="/settings/ngsw">Service Worker</a>
+    <a mat-list-item routerLink="/settings/privacy">Privacy Policy</a>
+    <a mat-list-item routerLink="/settings/licenses">Third Party Licenses</a>
   </mat-nav-list>
 </div>
