--- a/web/src/app/pages/settings/privacy-policy/privacy-policy.html
+++ b/web/src/app/pages/settings/privacy-policy/privacy-policy.html
@@ -1,6 +1,6 @@
 <hls-helmet title="Privacy policy"></hls-helmet>
 
-<div class="mat-typography privacy-policy mx-auto max-w-960">
+<div class="privacy-policy mat-typography mx-auto max-w-960">
   <h1>Privacy Policy</h1>
 
   <p>
